<resources>
    <string name="app_name">BWA MOV</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="presale_desc">Tidak perlu khawatir\nketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="photo">Photo</string>
    <string name="welcome_text">Welcome,\nAditd5</string>
    <string name="simpan_lanjutkan"><![CDATA[SIMPAN & LANJUTKAN]]></string>
    <string name="user_name">Aditd5</string>
    <string name="wallet">IDR 275.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="fast_x">Fast X</string>
    <string name="action_adventure">Action,Adventure</string>
    <string name="storyboard_fastx">The end of the road begins. Fast X, the tenth film in the Fast and Furious Saga, launches the final chapters of one of cinema\'s most storied and popular global franchises, now in its third decade and still going strong with the same core cast and characters as when it began. Over many missions and against impossible odds, Dom Toretto (Vin Diesel) and his family have outsmarted, out-nerved and outdriven every foe in their path.</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_s_played">Who’s Played</string>
    <string name="beli_tiket">BELI TIKET</string>
    <string name="pilih_kursi">Pilih Kursi</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="selected">Selected</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="batalkan">BATALKAN</string>
    <string name="items">Items</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="seat_c1">Seat C1</string>
    <string name="seat_c2">Seat C2</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="_747_movies">747 Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>